test/test_suite/errors/error_decl_ok.c3
module errors;

faultdef A;

faultdef A2, B2;

faultdef C, D;


